Fix - Make sure alignment is always enforced

--- a/css/base/typography.scss
+++ b/css/base/typography.scss
@@ -74,11 +74,11 @@ h4, .h4 {
 
 .text-align {
     &--right {
-        text-align: right;
+        text-align: right !important;
     }
 
     &--left {
-        text-align: left;
+        text-align: left !important;
     }
 }
 
